<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/unlock_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:clipToPadding="false"
              android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:background="#2DAC7C">

        <TextureView
            android:id="@+id/texture_view"
            android:layout_width="1dp"
            android:layout_height="1dp"/>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:src="@drawable/ic_back_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/btn_back"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/lock_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_lock"/>

        <TextView
            android:id="@+id/lock_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock_icon"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/confirm_identity"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </RelativeLayout>

    <!-- PIN/Passwort-Entsperrung (sichtbar wenn Methode = PIN) -->
    <LinearLayout
        android:id="@+id/pin_unlock_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/pin_unlock_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pin_enter_to_unlock"
            android:textColor="@color/font_deep_gray"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/et_pin_unlock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/pin_enter_to_unlock"
            android:contentDescription="@string/pin_enter_to_unlock"
            android:gravity="center"
            android:background="@drawable/bg_frame_search"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/btn_pin_unlock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/btn_unlock"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    <!-- Muster-Entsperrung (sichtbar wenn Methode = Muster) -->
    <com.lzx.lock.widget.LockPatternView
        android:id="@+id/unlock_lock_view"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="gone"/>

</LinearLayout>

