<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/unlock_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:clipToPadding="false">

    <ImageView
        android:id="@+id/bg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- Close button (top right) -->
    <ImageView
        android:id="@+id/btn_more"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/ic_close"/>

    <!-- App logo (top left) -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher"/>

    <!-- App label (next to logo, top left) -->
    <TextView
        android:id="@+id/app_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_toRightOf="@+id/app_logo"
        android:layout_alignTop="@+id/app_logo"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <!-- Centered content: icon, title, hint, pattern/PIN input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/unlock_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/unlock_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="16.0sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/unlock_fail_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"/>

        <!-- Muster-Entsperrung -->
        <com.lzx.lock.widget.LockPatternView
            android:id="@+id/unlock_lock_view"
            android:layout_width="280.0dip"
            android:layout_height="280.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:visibility="gone"/>

        <!-- PIN/Passwort-Entsperrung -->
        <LinearLayout
            android:id="@+id/pin_unlock_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_pin_unlock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="@string/pin_enter_to_unlock"
                android:contentDescription="@string/pin_enter_to_unlock"
                android:gravity="center"
                android:background="@drawable/bg_frame_search"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/btn_pin_unlock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/btn_unlock"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="12dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

